modified:   16. Linear Data Structures/Lists.ipynb

--- a/16. Linear Data Structures/Lists.ipynb
+++ b/16. Linear Data Structures/Lists.ipynb
@@ -703,6 +703,38 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "So let's now demonstrate some of the `ResizableArray` features that we have defined above.  \n",
+    "\n",
+    "First we instantiate a new `ResizableArray` object, which will consist of `int` types for this implementation:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
@@ -718,7 +750,7 @@
    },
    "outputs": [],
    "source": [
-    "ResizableArray<int> resizableArray = new ResizableArray<int>();  "
+    "ResizableArray<int> resizableIntArray = new ResizableArray<int>();  "
    ]
   },
   {
@@ -778,7 +810,37 @@
     }
    ],
    "source": [
-    "resizableArray"
+    "resizableIntArray"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "let's now populate our `resizableIntArray` instance with consecutive integers ranging from $1$ to $7$:"
    ]
   },
   {
@@ -799,7 +861,7 @@
    "source": [
     "for( int consecutiveInteger = 1; consecutiveInteger <= 7; consecutiveInteger++ )\n",
     "{\n",
-    "    resizableArray.Add( consecutiveInteger );\n",
+    "    resizableIntArray.Add( consecutiveInteger );\n",
     "}"
    ]
   },
@@ -860,7 +922,52 @@
     }
    ],
    "source": [
-    "resizableArray"
+    "resizableIntArray"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Observe that the `resizableIntArray` automatically resized itself to accomodate the full range of additional elements."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Now that we have a fully populated our `resizableIntArray`, let's now insert the value $99$ at index 3:"
    ]
   },
   {
@@ -879,7 +986,24 @@
    },
    "outputs": [],
    "source": [
-    "resizableArray.Insert(3, 99);"
+    "resizableIntArray.Insert(3, 99);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<p style=\"text-align: center;\">\n",
+    "    Observe that the <span style=\"color: blue; font-weight:bold\">source index</span> is <span style=\"color: blue; font-weight:bold\">index 3</span> and the <span style=\"color: red; font-weight:bold\">desitation index</span> is <span style=\"color: red; font-weight:bold\">index 4</span> of the same array\n",
+    "</p>"
    ]
   },
   {
@@ -947,14 +1071,31 @@
     }
    },
    "source": [
+    "<p style=\"text-align: center;\">\n",
+    "    To perform the insertion, we must first shift the <span style=\"color: blue; font-weight:bold\">element at the source index</span>, in addition to the  <span style=\"color: red; font-weight:bold\"> next 3 consecutive elements</span>, over <span style=\"font-weight: bold;\">one position to their immediate right<span>\n",
+    "</p>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "<table style=\"margin-left: auto; margin-right: auto;\">\n",
     "    <tbody>\n",
     "        <tr>\n",
     "            <td style=\"border: 1px solid black\">1</td>\n",
     "            <td style=\"border: 1px solid black\">2</td>\n",
     "            <td style=\"border: 1px solid black\">3</td>\n",
+    "            <td style=\"border: 1px solid black\">4</td>\n",
     "            <td style=\"border: 1px solid black; background: blue; color: white;\">4</td>\n",
-    "            <td style=\"border: 1px solid black; background: red; color: white;\">4</td>\n",
     "            <td style=\"border: 1px solid black; background: red; color: white;\">5</td>\n",
     "            <td style=\"border: 1px solid black; background: red; color: white;\">6</td>\n",
     "            <td style=\"border: 1px solid black; background: red; color: white;\">7</td>\n",
@@ -963,8 +1104,8 @@
     "            <td style=\"background: white; border: none;\">0</td>\n",
     "            <td style=\"background: white; border: none;\">1</td>\n",
     "            <td style=\"background: white; border: none;\">2</td>\n",
-    "            <td style=\"background: white; font-weight: bold; border: none; color: blue\">3</td>\n",
-    "            <td style=\"background: white; font-weight: bold; border: none; color: red\">4</td>\n",
+    "            <td style=\"background: white; border: none;\">3</td>\n",
+    "            <td style=\"background: white; font-weight: bold; border: none;\">4</td>\n",
     "            <td style=\"background: white; font-weight: bold; border: none;\">5</td>\n",
     "            <td style=\"background: white; font-weight: bold; border: none;\">6</td>\n",
     "            <td style=\"background: white; font-weight: bold; border: none;\">7</td>\n",
@@ -985,6 +1126,23 @@
    },
    "source": [
     "$$\\Huge{\\downarrow}$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<p style=\"text-align: center;\">\n",
+    "    Finally, we <span style= \"font-weight: bold;\">clobber</span> the duplicate element remaining at the <span style=\"color: green; font-weight:bold\">specified index</span> with the <span style=\"color: green; font-weight:bold\">specified element value</span>\n",
+    "</p>\n"
    ]
   },
   {
@@ -1082,7 +1240,37 @@
     }
    ],
    "source": [
-    "resizableArray"
+    "resizableIntArray"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "We can now perform search operations to detect the value we just inserted:"
    ]
   },
   {
@@ -1099,9 +1287,178 @@
      "languageId": "polyglot-notebook"
     }
    },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>True</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "// Does the array contain the value?\n",
+    "resizableIntArray.Contains( 99 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div class=\"dni-plaintext\"><pre>3</pre></div><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "// At which Index is that value now located?\n",
+    "resizableIntArray.IndexOf( 99 )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "Let's now remove the value which we just inserted: "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
    "outputs": [],
    "source": [
-    "resizableArray.RemoveAt(3);"
+    "resizableIntArray.RemoveAt(3);"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<p style=\"text-align: center;\">\n",
+    "    Observe that, in an opposite fashion from the <code>Add()</code> method,<br> the <span style=\"color: blue; font-weight:bold\">source index</span> is <span style=\"color: blue; font-weight:bold\">index 4</span> and the <span style=\"color: red; font-weight:bold\">desitation index</span> is <span style=\"color: red; font-weight:bold\">index 3</span> of the same array\n",
+    "</p>"
    ]
   },
   {
@@ -1168,6 +1525,23 @@
     }
    },
    "source": [
+    "<p style=\"text-align: center;\">\n",
+    "    Once again, in an opposite fashion from the <code>Add()</code> method, to perform the deletion, we must first shift the <span style=\"color: blue; font-weight:bold\">element at the source index</span>, in addition to the  <span style=\"color: red; font-weight:bold\"> next 3 consecutive elements</span>, over <span style=\"font-weight: bold;\">one position to their immediate left<span>\n",
+    "</p>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "<table style=\"margin-left: auto; margin-right: auto;\">\n",
     "    <tbody>\n",
     "        <tr>\n",
@@ -1206,6 +1580,23 @@
    },
    "source": [
     "$$\\Huge{\\downarrow}$$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<p style=\"text-align: center\">\n",
+    "    Observe that, following the left shift operation, the last element of the <code>resizableArray</code> now holds a <span style=\"font-weight: bold; color: goldenrod;\">duplicate element</span>\n",
+    "</p>"
    ]
   },
   {
@@ -1272,6 +1663,23 @@
     }
    },
    "source": [
+    "<p style=\"text-align: center;\">\n",
+    "    Finally, we <span style= \"font-weight: bold;\">clobber</span> the duplicate element remaining at the <span style=\"color: green; font-weight:bold\">specified index</span> with the <span style=\"color: green; font-weight:bold\">default empty value corresponding to the given array type</span>\n",
+    "</p>\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
     "<table style=\"margin-left: auto; margin-right: auto;\">\n",
     "    <tbody>\n",
     "        <tr>\n",
@@ -1300,7 +1708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1355,12 +1763,12 @@
     }
    ],
    "source": [
-    "resizableArray"
+    "resizableIntArray"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1374,41 +1782,12 @@
    },
    "outputs": [],
    "source": [
-    "resizableArray.Remove(6);"
+    "resizableIntArray.Remove(6);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The element that you specified could not be found\n",
-      "\n",
-      "Stack Trace:    at Submission#2.ResizableArray`1.RemoveAt(Int32 indexToRemoveAt)\r\n"
-     ]
-    }
-   ],
-   "source": [
-    "resizableArray.Remove(6);"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1463,7 +1842,116 @@
     }
    ],
    "source": [
-    "resizableArray\n"
+    "resizableIntArray\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "One last thing, let's clear the whole array and return it to it's default state:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "resizableIntArray.Clear();"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>OccupiedElements</th><th>ArrayState</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>0</pre></div></td><td><div class=\"dni-plaintext\"><pre>[ 0, 0, 0, 0 ]</pre></div></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "resizableIntArray"
    ]
   }
  ],
