modified:   16. Linear Data Structures/Lists.ipynb

--- a/16. Linear Data Structures/Lists.ipynb
+++ b/16. Linear Data Structures/Lists.ipynb
@@ -967,7 +967,7 @@
     }
    },
    "source": [
-    "Now that we have a fully populated our `resizableIntArray`, let's now insert the value $99$ at index 3:"
+    "Now that we have a fully populated our `resizableIntArray`, let's now insert the value $99$ at $index\\,3$:"
    ]
   },
   {
