--- a/16. Linear Data Structures/Lists/The List ADT.ipynb
+++ b/16. Linear Data Structures/Lists/The List ADT.ipynb
@@ -1,11 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
@@ -33,6 +28,7 @@
    },
    "source": [
     "## Lists\n",
+    "### The \"List\" Abstract Data Type\n",
     "---"
    ]
   },
@@ -48,22 +44,7 @@
     }
    },
    "source": [
-    "### The \"List\" Abstract Data Structure "
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "#### What is an **Abstract Data Type** (**ADT**)"
+    "### What is an **Abstract Data Type** (**ADT**)"
    ]
   },
   {
@@ -108,7 +89,7 @@
     }
    },
    "source": [
-    "#### Introducing the `System.Collections.IList` Interface"
+    "### Introducing the `System.Collections.IList` Interface"
    ]
   },
   {
@@ -1966,8 +1947,62 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
+     },
+     {
+      "aliases": [],
+      "name": "value"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
      }
     ]
    }
