--- a/16. Linear Data Structures/Lists/Static Lists (Array-based).ipynb
+++ b/16. Linear Data Structures/Lists/Static Lists (Array-based).ipynb
@@ -1872,6 +1872,17 @@
        "frontend"
       ],
       "name": "vscode"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
