modified:   16. Linear Data Structures/Lists/Static Lists (Array-based).ipynb

--- a/16. Linear Data Structures/Lists/Static Lists (Array-based).ipynb
+++ b/16. Linear Data Structures/Lists/Static Lists (Array-based).ipynb
@@ -1377,7 +1377,7 @@
    },
    "source": [
     "<p style=\"text-align: center;\">\n",
-    "    Once again, in an opposite fashion from the <code>Add()</code> method, to perform the deletion, we must first shift the <span style=\"color: blue; font-weight:bold\">element at the source index</span>, in addition to the  <span style=\"color: red; font-weight:bold\"> next 3 consecutive elements</span>, over <span style=\"font-weight: bold;\">one position to their immediate left<span>\n",
+    "    Once again, in an opposite fashion from the <code>Add()</code> method, to perform the deletion, we must first shift the <span style=\"color: blue; font-weight:bold\">element at the source index</span>, in addition to the  <span style=\"color: red; font-weight:bold\"> next 3 consecutive elements</span>, over <span style=\"font-weight: bold;\">one position to their immediate left<span>, which results in the <bold>deletion of the deisired element</bold> by way of overwriting it during the shift.\n",
     "</p>"
    ]
   },
