modified:   16. Linear Data Structures/Lists/Static Lists (Array-based).ipynb

--- a/16. Linear Data Structures/Lists/Static Lists (Array-based).ipynb
+++ b/16. Linear Data Structures/Lists/Static Lists (Array-based).ipynb
@@ -1515,7 +1515,7 @@
    },
    "source": [
     "<p style=\"text-align: center;\">\n",
-    "    Finally, we <span style= \"font-weight: bold;\">clobber</span> the duplicate element remaining at the <span style=\"color: green; font-weight:bold\">specified index</span> with the <span style=\"color: green; font-weight:bold\">default empty value corresponding to the given array type</span>\n",
+    "    Finally, we <span style= \"font-weight: bold;\">clobber</span> the duplicate element remaining at the <span style=\"color: green; font-weight:bold\">last index</span> with the <span style=\"color: green; font-weight:bold\">default empty value corresponding to the given array type</span>\n",
     "</p>\n"
    ]
   },
