modified:   16. Linear Data Structures/Lists/Static Lists (Array-based).ipynb

--- a/16. Linear Data Structures/Lists/Static Lists (Array-based).ipynb
+++ b/16. Linear Data Structures/Lists/Static Lists (Array-based).ipynb
@@ -1446,7 +1446,7 @@
    },
    "source": [
     "<p style=\"text-align: center\">\n",
-    "    However, we must observe that, following the left shift operation, the last element of the <code>resizableArray</code> now holds a <span style=\"font-weight: bold; color: goldenrod;\">duplicate element</span>\n",
+    "    However, we must observe that, following the left shift operation, the <span style=\"font-weight: bold; color: goldenrod;\">last index</span> of the <code>resizableArray</code> now holds a <span style=\"font-weight: bold; color: goldenrod;\">duplicate element</span>\n",
     "</p>"
    ]
   },
