new file:   16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb renamed:    16. Linear Data Structures/Lists/Static Lists (Array-based).ipynb -> 16. Linear Data Structures/Lists/Static (Array-based) Lists.ipynb

--- a/16. Linear Data Structures/Lists/Static (Array-based) Lists.ipynb
+++ b/16. Linear Data Structures/Lists/Static (Array-based) Lists.ipynb
@@ -215,7 +215,7 @@
     "        get\n",
     "        {\n",
     "\n",
-    "            // Try to assign the given value at the specified index,\n",
+    "            // Try to retrieve the given value at the specified index,\n",
     "            // proceeding cautiously in the event that the given index\n",
     "            // could possibly be out of the boundaries of the Array\n",
     "            try\n",
@@ -1889,6 +1889,13 @@
      {
       "aliases": [],
       "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
      }
     ]
    }
