modified:   16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb modified:   16. Linear Data Structures/Lists/Static (Array-based) Lists.ipynb

--- a/16. Linear Data Structures/Lists/Static (Array-based) Lists.ipynb
+++ b/16. Linear Data Structures/Lists/Static (Array-based) Lists.ipynb
@@ -430,7 +430,7 @@
     "    public T RemoveAt( int indexToRemoveAt )\n",
     "    {\n",
     "\n",
-    "        // Try to insert the given element using the specified index,\n",
+    "        // Try to remove the given element using the specified index,\n",
     "        // proceeding cautiously in the event that the given index\n",
     "        // could possibly be out of the boundaries contained by the Array\n",
     "        try\n",
@@ -1889,13 +1889,6 @@
      {
       "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "languageName": null,
-      "name": "vscode"
      }
     ]
    }
