modified:   16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb modified:   16. Linear Data Structures/Lists/Static (Array-based) Lists.ipynb

--- a/16. Linear Data Structures/Lists/Static (Array-based) Lists.ipynb
+++ b/16. Linear Data Structures/Lists/Static (Array-based) Lists.ipynb
@@ -1889,6 +1889,18 @@
      {
       "aliases": [],
       "name": "csharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
      }
     ]
    }
