--- a/16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb
+++ b/16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb
@@ -564,16 +564,9 @@
     "        catch ( NullReferenceException nre )\n",
     "        {\n",
     "            Console.WriteLine(\n",
-    "\n",
-    "                (indexToRemoveAt == -1) ?\n",
-    "                    $\"The element that you specified could not be found\\n\\n\"\n",
-    "                    +\n",
-    "                    $\"Stack Trace: {nre.StackTrace}\" \n",
-    "                    :\n",
-    "                    $\"Index: {indexToRemoveAt} is invalid\\n\\n\"\n",
-    "                    +\n",
-    "                    $\"Stack Trace: {nre.StackTrace}\"\n",
-    "                    \n",
+    "                $\"Index: {indexToRemoveAt} is invalid\\n\\n\"\n",
+    "                +\n",
+    "                $\"Stack Trace: {nre.StackTrace}\"       \n",
     "            );\n",
     "\n",
     "            return default(T);\n",
@@ -981,6 +974,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 2 -> 4 -> 5 -> 6 -> 7"
+     ]
+    }
+   ],
+   "source": [
+    "linkedIntegerList.PrintList();"
+   ]
+  },
+  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {
@@ -997,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1011,48 +1031,44 @@
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div class=\"dni-plaintext\"><pre>5</pre></div><style>\r\n",
-       ".dni-code-hint {\r\n",
-       "    font-style: italic;\r\n",
-       "    overflow: hidden;\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview {\r\n",
-       "    white-space: nowrap;\r\n",
-       "}\r\n",
-       ".dni-treeview td {\r\n",
-       "    vertical-align: top;\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "details.dni-treeview {\r\n",
-       "    padding-left: 1em;\r\n",
-       "}\r\n",
-       "table td {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "table tr { \r\n",
-       "    vertical-align: top; \r\n",
-       "    margin: 0em 0px;\r\n",
-       "}\r\n",
-       "table tr td pre \r\n",
-       "{ \r\n",
-       "    vertical-align: top !important; \r\n",
-       "    margin: 0em 0px !important;\r\n",
-       "} \r\n",
-       "table th {\r\n",
-       "    text-align: start;\r\n",
-       "}\r\n",
-       "</style>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index: 7 is invalid\n",
+      "\n",
+      "Stack Trace:    at Submission#2.DynamicList`1.RemoveAt(Int32 indexToRemoveAt)\r\n"
+     ]
     }
    ],
    "source": [
-    "linkedIntegerList.Remove( 7 )"
+    "linkedIntegerList.RemoveAt( 7 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 2 -> 4 -> 5 -> 6 -> 7"
+     ]
+    }
+   ],
+   "source": [
+    "linkedIntegerList.PrintList();"
    ]
   }
  ],
