--- a/16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb
+++ b/16. Linear Data Structures/Lists/Dynamic (Linked) Lists.ipynb
@@ -337,6 +337,52 @@
     "\n",
     "    // METHODS -----------------------------------------------------------------\n",
     "    //----------------------- I N S E R T I O N --------------------------------\n",
+    "    // Remove the specified node from the list of nodes\n",
+    "    private void InsertListNode( ListNode nodeToShift, ListNode previousNode, T element )\n",
+    "    {\n",
+    "        \n",
+    "        ListNode newNode = new ListNode( element );\n",
+    "\n",
+    "\n",
+    "        // If we detect that the specified previous node is empty:\n",
+    "        if ( previousNode == null )\n",
+    "        {\n",
+    "\n",
+    "            // Then we must have the case where the head node\n",
+    "            // is to be shifted and replaced with the new node to be inserted,\n",
+    "            // so we must update the head node accordingly\n",
+    "            newNode.NextNode = nodeToShift.NextNode;\n",
+    "            this.head = newNode;\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // Otherwise,\n",
+    "        // the target node could be some intermediate Node\n",
+    "        // residing in between the head and the tail:\n",
+    "        else\n",
+    "        {\n",
+    "\n",
+    "            // In that case, uncouple the target node by redirecting \n",
+    "            // it's previous and next node pointers, respectively\n",
+    "            newNode               = nodeToShift;\n",
+    "            nodeToShift           = nodeToShift.NextNode;\n",
+    "            previousNode.NextNode = newNode;\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // Lastly,\n",
+    "        // If it is the case that the node to shift is the tail:\n",
+    "        if( object.ReferenceEquals(nodeToShift, this.tail) )\n",
+    "        {\n",
+    "\n",
+    "            Add( element );\n",
+    "\n",
+    "        } \n",
+    "\n",
+    "    }\n",
+    "    //--------------------------------------------------------------------------\n",
     "    // Add a new element at the end of the list\n",
     "    public void Add( T element )\n",
     "    {\n",
@@ -376,6 +422,80 @@
     "        // Increment the node count to reflect the new Node\n",
     "        this.nodeCount++;\n",
     "\n",
+    "    }\n",
+    "    //--------------------------------------------------------------------------\n",
+    "    // Insert a new element at the specified node index\n",
+    "    public void InsertAt( T element, int indexToInsertAt )\n",
+    "    {\n",
+    "\n",
+    "        // Try to remove the desired node using the specified index,\n",
+    "        // proceeding cautiously in the event that the given index\n",
+    "        // could possibly be out of the boundaries contained by the List\n",
+    "        try\n",
+    "        {\n",
+    "            \n",
+    "            // Initialize a counter to track the current index\n",
+    "            // over the node traversal\n",
+    "            int currentIndex = 0;\n",
+    "\n",
+    "\n",
+    "            // Instantiate a Leading Traversal Node \n",
+    "            // initially pointing to the head of the list\n",
+    "            ListNode leadingNode = this.head;\n",
+    "\n",
+    "\n",
+    "            // Set up Trailing Traversal Node \n",
+    "            // which will follow behind the Leading Traversal node\n",
+    "            ListNode trailingNode = null;\n",
+    "\n",
+    "\n",
+    "            // Iterating While the current index is still less than\n",
+    "            // the index to remove at:\n",
+    "            while( currentIndex < indexToInsertAt )\n",
+    "            {\n",
+    "\n",
+    "                // Point the trailing node at leading Node\n",
+    "                trailingNode = leadingNode;\n",
+    "\n",
+    "\n",
+    "                // Point the leading node to it's next node\n",
+    "                leadingNode = leadingNode.NextNode;\n",
+    "\n",
+    "\n",
+    "                // Increment the current index\n",
+    "                currentIndex++;\n",
+    "\n",
+    "            }\n",
+    "\n",
+    "\n",
+    "            // After all that,\n",
+    "            // we have arrived at the desired node index\n",
+    "\n",
+    "\n",
+    "            // Remove the discovered element from the list of nodes\n",
+    "            InsertListNode( leadingNode, trailingNode, element );\n",
+    "\n",
+    "\n",
+    "            // Increment the node count to reflect the new Node\n",
+    "            this.nodeCount++;\n",
+    "\n",
+    "        }\n",
+    "\n",
+    "\n",
+    "        // Should there be an error, \n",
+    "        // it's sure to be that the specified index is out of range.\n",
+    "        // so provide an appropriate exception which generates a \n",
+    "        // message to the user, \n",
+    "        // and return the given type's default equivalent to null\n",
+    "        // in order to indicate that the operation has failed\n",
+    "        catch ( NullReferenceException nre )\n",
+    "        {\n",
+    "            Console.WriteLine(\n",
+    "                $\"Index: {indexToInsertAt} is invalid\\n\\n\"\n",
+    "                +\n",
+    "                $\"Stack Trace: {nre.StackTrace}\"       \n",
+    "            );\n",
+    "        }  \n",
     "    }\n",
     "    //--------------------------------------------------------------------------\n",
     "    //--------------------------- S E A R C H ----------------------------------\n",
@@ -678,7 +798,7 @@
     "        \n",
     "    }\n",
     "    //--------------------------------------------------------------------------\n",
-    "    \n",
+    "\n",
     "}"
    ]
   },
@@ -991,60 +1111,9 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 -> 2 -> 4 -> 5 -> 6 -> 7"
-     ]
-    }
-   ],
-   "source": [
-    "linkedIntegerList.PrintList();"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
-    "<br>"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    },
-    "vscode": {
-     "languageId": "polyglot-notebook"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Index: 7 is invalid\n",
-      "\n",
-      "Stack Trace:    at Submission#2.DynamicList`1.RemoveAt(Int32 indexToRemoveAt)\r\n"
-     ]
-    },
-    {
      "data": {
       "text/html": [
-       "<div class=\"dni-plaintext\"><pre>0</pre></div><style>\r\n",
+       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>6</pre></div></td></tr></tbody></table><style>\r\n",
        ".dni-code-hint {\r\n",
        "    font-style: italic;\r\n",
        "    overflow: hidden;\r\n",
@@ -1083,12 +1152,12 @@
     }
    ],
    "source": [
-    "linkedIntegerList.RemoveAt( 7 )"
+    "linkedIntegerList"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -1106,6 +1175,130 @@
      "output_type": "stream",
      "text": [
       "1 -> 2 -> 4 -> 5 -> 6 -> 7"
+     ]
+    }
+   ],
+   "source": [
+    "linkedIntegerList.PrintList();"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "linkedIntegerList.InsertAt(3, 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table><thead><tr><th>NodeCount</th></tr></thead><tbody><tr><td><div class=\"dni-plaintext\"><pre>7</pre></div></td></tr></tbody></table><style>\r\n",
+       ".dni-code-hint {\r\n",
+       "    font-style: italic;\r\n",
+       "    overflow: hidden;\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview {\r\n",
+       "    white-space: nowrap;\r\n",
+       "}\r\n",
+       ".dni-treeview td {\r\n",
+       "    vertical-align: top;\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "details.dni-treeview {\r\n",
+       "    padding-left: 1em;\r\n",
+       "}\r\n",
+       "table td {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "table tr { \r\n",
+       "    vertical-align: top; \r\n",
+       "    margin: 0em 0px;\r\n",
+       "}\r\n",
+       "table tr td pre \r\n",
+       "{ \r\n",
+       "    vertical-align: top !important; \r\n",
+       "    margin: 0em 0px !important;\r\n",
+       "} \r\n",
+       "table th {\r\n",
+       "    text-align: start;\r\n",
+       "}\r\n",
+       "</style>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "linkedIntegerList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> 2 -> 4 -> 5 -> 6 -> 7 -> Index: 6 is invalid\n",
+      "\n",
+      "Stack Trace:    at Submission#2.DynamicList`1.get_Item(Int32 index)\n",
+      "0"
      ]
     }
    ],
